--- a/src/Global.css
+++ b/src/Global.css
@@ -9,9 +9,21 @@
 }
 
 @layer components {
+  .title {
+    @apply text-center text-2xl text-teal-700;
+  }
+
+  .actions {
+    @apply w-full flex justify-between;
+  }
+
   .btn-primary {
     @apply px-4 py-0 h-8 bg-teal-700 border-none rounded text-white transition ease-in-out delay-100 hover:bg-teal-900 hover:cursor-pointer;
   }
+  .btn-secondary {
+    @apply px-4 py-0 h-8 bg-slate-300 border-none rounded text-gray-900 transition ease-in-out delay-100 hover:bg-slate-400 hover:cursor-pointer;
+  }
+
   /* Form */
   .form__title {
     @apply text-center text-2xl text-teal-700;
@@ -55,4 +67,62 @@
     transform: scale(1);
     opacity: 1;
   }
+}
+
+.fileover {
+  animation: shake 1s;
+  animation-iteration-count: infinite;
+}
+
+/* Shake animation */
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
+.grid__image {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 2em 2em;
 }
