--- a/src/commons/Spinner/spinner.css
+++ b/src/commons/Spinner/spinner.css
@@ -2,7 +2,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.7);
   z-index: 100;
   display: flex;
   justify-content: center;
