--- a/src/commons/Modal/Modal.css
+++ b/src/commons/Modal/Modal.css
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  z-index: 600;
+  /* z-index: 600; */
   top: 0;
   left: 0;
   width: 100%;
@@ -16,7 +16,8 @@
   position: relative;
   background-color: #fff;
   min-width: 320px;
-  max-width: 480px;
+  /* max-width: 480px; */
+  width: 90%;
   min-height: 200px;
   max-height: 600px;
   overflow-y: auto;
