--- a/src/styles/textEditor.css
+++ b/src/styles/textEditor.css
@@ -47,9 +47,11 @@
 }
 
 .ql-editor {
-  min-height: 50vh;
+  /* min-height: 20vh; */
+  height: 100%;
   font-size: 16px;
 }
+
 .App .ql-snow .ql-tooltip.ql-flip {
   width: auto;
   left: 17px !important;
