--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -85,6 +85,9 @@ body {
   .input__error {
     @apply absolute block pt-[3px] text-xs text-red-500 transition-opacity duration-1000 ease-in-out;
   }
+  .form__error {
+    @apply absolute text-left w-11/12 rounded text-sm text-red-500 block transition-opacity duration-1000 ease-in-out;
+  }
   .form__input--color {
     @apply p-1 h-10 rounded;
   }
@@ -254,4 +257,117 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 2em 2em;
+}
+
+/********************/
+/*   Format Table   */
+/********************/
+.table__container {
+  border: 1px solid var(--gray-30);
+  border-radius: 5px;
+  padding: 1em;
+  margin-top: 1.5em;
+}
+.table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  width: 100%;
+  word-break: break-word;
+}
+.table th {
+  min-width: 100px;
+}
+.table th,
+.table td {
+  text-align: center;
+  padding: 0.5rem;
+  border-bottom: thin solid #dedede;
+  font-size: 16px;
+}
+.table__actions {
+  display: flex;
+  justify-content: space-evenly;
+}
+.table__icon {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 18px;
+  padding: 10px;
+}
+.table__icon--edit {
+  color: var(--blue-60);
+}
+.table__icon--delete {
+  color: var(--error);
+}
+
+@media (max-width: 950px) {
+  .table__container {
+    border: none;
+    padding: 0;
+  }
+  .table thead {
+    display: none;
+  }
+  .table tr {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--gray-30);
+    padding: 0.5rem 0;
+    margin-bottom: 1rem;
+  }
+
+  .table td {
+    text-align: left;
+    word-break: normal;
+  }
+
+  .table td[data-titulo] {
+    display: flex;
+  }
+
+  .table__contact td:nth-child(5) {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .table__contact td:last-child {
+    text-align: center;
+    border-bottom: none;
+  }
+
+  .table td[data-titulo]::before {
+    content: attr(data-titulo);
+    width: 100px;
+    color: var(--gray-40);
+  }
+}
+
+/*********************/
+/*   Confirm Form    */
+/*********************/
+.confirm__delete {
+  background-color: #fff;
+  padding: 40px 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.delete__paragraph {
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--gray-80);
+  margin: 26px 0;
+}
+
+.delete__actions {
+  margin-top: 14px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
