--- a/src/styles/textEditor.css
+++ b/src/styles/textEditor.css
@@ -33,7 +33,7 @@
 .ql-size span[data-value='extra-small']::before {
   font-size: 13px !important;
 }
-.ql-size-small,
+/* .ql-size-small,
 .ql-size span[data-value='small']::before {
   font-size: 14px !important;
 }
@@ -44,7 +44,7 @@
 .ql-size-large,
 .ql-size span[data-value='large']::before {
   font-size: 20px !important;
-}
+} */
 
 .ql-editor {
   /* min-height: 20vh; */
