--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -271,6 +271,10 @@ body {
   transition: width 0.8s;
 }
 
+.transition-height {
+  transition: height 0.8s;
+}
+
 .grid-layout {
   grid-template-rows: auto minmax(0, 1fr);
 }
